Resolve unexpected scrollbar issue

--- a/01_Heart_Trail_Animation/style.css
+++ b/01_Heart_Trail_Animation/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     background: #000;
     height: 100vh;
+    overflow: hidden;
 }
 
 span {
